Add program to show coverage